--- a/package.json
+++ b/package.json
@@ -24,33 +24,35 @@
     "yarn": ">=1.1"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@sanity/client": "^3.3.2",
+    "@sanity/image-url": "^1.0.1",
+    "@walletconnect/react-native-dapp": "^1.7.8",
+    "base-64": "^1.0.0",
     "concurrently": "^7.3.0",
     "expo": "^45.0.0",
-    "expo-analytics-amplitude": "~11.2.0",
-    "expo-apple-authentication": "~4.2.1",
-    "expo-asset": "~8.5.0",
-    "expo-av": "~11.2.3",
-    "expo-barcode-scanner": "~11.3.0",
-    "expo-blur": "~11.1.0",
-    "expo-camera": "~12.2.0",
-    "expo-constants": "~13.1.1",
-    "expo-facebook": "~12.2.0",
-    "expo-font": "~10.1.0",
-    "expo-linear-gradient": "~11.3.0",
-    "expo-local-authentication": "~12.2.0",
-    "expo-sensors": "~11.3.0",
+    "expo-crypto-polyfills": "^1.1.0",
+    "expo-file-system": "^14.0.0",
     "expo-updates": "~0.13.3",
+    "expo-vector-icons": "^10.0.1",
+    "https-browserify": "^1.0.0",
     "postcss": "^8.4.14",
+    "process": "^0.11.10",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-maps": "0.30.2",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "9.6.4",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-tcp": "^4.0.0",
+    "stream-http": "^3.2.0",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.1.6",
     "twrnc": "^3.3.3"
