--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "platforms": ["ios", "android"],
     "version": "0.0.0",
     "orientation": "portrait",
+    "scheme": "demo",
     "primaryColor": "#fff",
     "icon": "./assets/app-icon.png",
     "splash": {
