@react-spring/native

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@react-spring/native": "^9.5.1",
     "@sanity/client": "^3.3.2",
     "@sanity/image-url": "^1.0.1",
     "@walletconnect/react-native-dapp": "^1.7.8",
@@ -43,6 +44,7 @@
     "process": "^0.11.10",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "^1.8.0",
     "react-native-paper": "^4.12.3",
@@ -52,7 +54,10 @@
     "react-native-svg": "9.6.4",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tcp": "^4.0.0",
+    "react-spring": "^9.5.1",
+    "react-tinder-card": "^1.4.5",
     "stream-http": "^3.2.0",
+    "styled-components": "^5.3.5",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.1.6",
     "twrnc": "^3.3.3"
