--- a/package.json
+++ b/package.json
@@ -32,11 +32,15 @@
     "@sanity/client": "^3.3.2",
     "@sanity/image-url": "^1.0.1",
     "@walletconnect/react-native-dapp": "^1.7.8",
+    "add": "^2.0.6",
     "base-64": "^1.0.0",
     "concurrently": "^7.3.0",
     "expo": "^45.0.0",
+    "expo-camera": "^12.2.0",
     "expo-crypto-polyfills": "^1.1.0",
     "expo-file-system": "^14.0.0",
+    "expo-image-picker": "^13.1.1",
+    "expo-svg-uri": "^1.3.1",
     "expo-updates": "~0.13.3",
     "expo-vector-icons": "^10.0.1",
     "https-browserify": "^1.0.0",
@@ -47,6 +51,7 @@
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-image-blur-loading": "^1.1.6",
     "react-native-paper": "^4.12.3",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
@@ -60,7 +65,8 @@
     "styled-components": "^5.3.5",
     "tailwind-rn": "^4.2.0",
     "tailwindcss": "^3.1.6",
-    "twrnc": "^3.3.3"
+    "twrnc": "^3.3.3",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
